--- a/Theater/PageMain/PageActors.xaml
+++ b/Theater/PageMain/PageActors.xaml
@@ -9,6 +9,40 @@
       Title="PageActors">
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="300"/>
+        </Grid.RowDefinitions>
+
+        <ListView x:Name="listOfActors" Grid.Row="0" ScrollViewer.CanContentScroll="False">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="3*"/>
+                        </Grid.ColumnDefinitions>
+                        <Image Source="{Binding CurrentPhoto}" Grid.Column="0"/>
+                        <StackPanel Grid.Column="1" Width="auto" Orientation="Vertical" HorizontalAlignment="Left">
+                            <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
+                        <Run Text="Название: "/>
+                        <Run Text="{Binding title}"/>
+                            </TextBlock>
+                            <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
+                        <Run Text="Дата: "/>
+                        <Run Text=" {Binding date} "/>
+                            </TextBlock>
+                            <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
+                        <Run Text="Цена: "/>
+                        <Run Text="В работе"/>
+                            </TextBlock>
+                        </StackPanel>
+                        <Button x:Name="btnAddToBasket" Height="30" VerticalAlignment="Center" Grid.Column="2">Добавить в корзину</Button>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
