--- a/Theater/PageMain/PageShowtimes.xaml
+++ b/Theater/PageMain/PageShowtimes.xaml
@@ -5,21 +5,22 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:theater.PageMain"
       mc:Ignorable="d" 
-      d:DesignHeight="800" d:DesignWidth="1200"
+      d:DesignHeight="400" d:DesignWidth="800"
       Title="PageShowtimes">
 
     <Grid>
+       
         <Grid.RowDefinitions>
-            <RowDefinition Height="33"/>
-            <RowDefinition Height="27"/>
-            <RowDefinition Height="690"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="300"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <TextBox x:Name="search" TextChanged="searchChanged"/>
+        
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <TextBox x:Name="search" Height="30" TextChanged="searchChanged"/>
             <ComboBox x:Name="sortPerform" Width="70" SelectionChanged="sortChanged">
-                <TextBlock>По алфавиту</TextBlock>
-                <TextBlock>Против алфавита</TextBlock>
+                <TextBlock>От А до Я</TextBlock>
+                <TextBlock>От Я до А</TextBlock>
                 <TextBlock>Год создания - возрастание</TextBlock>
                 <TextBlock>Год создания - убывание</TextBlock>
             </ComboBox>
@@ -29,14 +30,18 @@
             <Button x:Name="btnBack" Click="btnBack_Click">Вернуться</Button>
             <Button x:Name="btnGoToBasket" Click="btnGoToBasket_Click">Корзина</Button>
         </StackPanel>
-        <ListView x:Name="listOfPerformances" Grid.Row="2" ScrollViewer.CanContentScroll="False">
+        
+        <ListView x:Name="listOfPerformances" Grid.Row="1" ScrollViewer.CanContentScroll="False">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="700"/>
-                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="3*"/>
+                            <ColumnDefinition Width="1.5*"/>
                         </Grid.ColumnDefinitions>
                         <Image Source="{Binding CurrentPhoto}" Grid.Column="0"/>
                         <StackPanel Grid.Column="1" Width="auto" Orientation="Vertical" HorizontalAlignment="Left">
@@ -53,11 +58,13 @@
                                 <Run Text="В работе"/>
                             </TextBlock>
                         </StackPanel>
-                        <Button x:Name="btnAddToBasket" Grid.Column="2">Добавить в корзину</Button>
+                        <Button x:Name="btnAddToBasket" Height="30" VerticalAlignment="Center" Grid.Column="2">Добавить в корзину</Button>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <TextBlock x:Name="tbCounter" Text="Не найдено" Grid.Row="3" Width="95" HorizontalAlignment="Left" Height="22" Margin="695,0,0,0"/>
+        
+        <TextBlock x:Name="tbCounter" Text="Не найдено" Grid.Row="2" HorizontalAlignment="Left"/>
+    
     </Grid>
 </Page>
