--- a/Theater/App.xaml
+++ b/Theater/App.xaml
@@ -4,8 +4,9 @@
              xmlns:local="clr-namespace:theater"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <Style TargetType="Button">
-            
+        <Style x:Key="navButton" TargetType="Button">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Width" Value="190"/>
         </Style>
         <Style TargetType="TextBox">
             <Setter Property="Background" Value="LightGray"/>
