--- a/Theater/PageMain/ViewerNavigation.xaml
+++ b/Theater/PageMain/ViewerNavigation.xaml
@@ -9,11 +9,15 @@
       Title="ViewerNavigation">
 
     <Grid>
-        <StackPanel Orientation="Horizontal">
-            <Button x:Name="btnShowtimes" Style="{StaticResource navButton}" Click="btnShowtimes_Click" Content="Показы"/>
-            <Button x:Name="btnPerformances" Style="{StaticResource navButton}" Click="btnPerformances_Click">Спектакли</Button>
-            <Button x:Name="btnActors" Style="{StaticResource navButton}" Click="btnActors_Click">Актёры</Button>
-            <Button x:Name="btnSponsors" Style="{StaticResource navButton}" Click="btnSponsors_Click">Спонсоры</Button>
-        </StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="btnShowtimes" Grid.Column="0" Style="{StaticResource navButton}" Click="btnShowtimes_Click" Content="Показы"/>
+        <Button x:Name="btnPerformances" Grid.Column="1" Style="{StaticResource navButton}" Click="btnPerformances_Click" Content="Спектакли"/>
+        <Button x:Name="btnActors" Grid.Column="2" Style="{StaticResource navButton}" Click="btnActors_Click" Content="Актёры"/>
+        <Button x:Name="btnSponsors" Grid.Column="3" Style="{StaticResource navButton}" Click="btnSponsors_Click" Content="Спонсоры"/>
     </Grid>
 </Page>
