--- a/Theater/MainWindow.xaml
+++ b/Theater/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:theater"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Background>
+        <ImageBrush ImageSource="Resources/curtain.jpg"/>
+    </Window.Background>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100*"/>
