--- a/Theater/App.xaml
+++ b/Theater/App.xaml
@@ -19,7 +19,7 @@
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="FontSize" Value="30"/>
-            <Setter Property="Margin" Value="15"/>
+            <Setter Property="Margin" Value="20 100"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
                 
         </Style>
