--- a/Theater/MainWindow.xaml
+++ b/Theater/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:theater"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="" Height="450" Width="800">
     <Window.Background>
         <ImageBrush ImageSource="Resources/curtain.jpg"/>
     </Window.Background>
