--- a/Theater/PageMain/PageBasket.xaml
+++ b/Theater/PageMain/PageBasket.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="300"/>
+            <RowDefinition Height="200*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <ListView x:Name="listBasket" Grid.Row="0">
