--- a/Theater/PageAdmin/PageAddShowtime.xaml
+++ b/Theater/PageAdmin/PageAddShowtime.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="theater.PageMain.PageSponsors"
+﻿<Page x:Class="theater.PageAdmin.PageAddShowtime"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:theater.PageMain"
+      xmlns:local="clr-namespace:theater.PageAdmin"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageSponsors">
+      d:DesignHeight="350" d:DesignWidth="200"
+      Title="PageAddShowtime">
 
     <Grid>
         
