--- a/Theater/PageAdmin/PageAddActor.xaml
+++ b/Theater/PageAdmin/PageAddActor.xaml
@@ -5,22 +5,26 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:theater.PageAdmin"
       mc:Ignorable="d" 
-      d:DesignHeight="350" d:DesignWidth="200"
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="PageAddActor">
 
     <Grid>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0">
-            <TextBlock/>
-            <TextBlock/>
+        <StackPanel x:Name="adminStackPanel" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <TextBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
             <ComboBox x:Name="cbSex" HorizontalAlignment="Stretch" Margin="10" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged">
                 <ComboBoxItem  IsHitTestVisible="False" Content="Выберите пол:"/>
                 <ComboBoxItem Content="м"/>
                 <ComboBoxItem Content="ж"/>
             </ComboBox>
-            <TextBlock/>
-            <TextBlock/>
-            <TextBlock/>
-            <TextBlock/>
+            <TextBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <TextBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <TextBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <TextBox HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Content="Добавить актёра" Margin="5"/>
+                <Button x:Name="btnBack" Grid.Column="1" Content="Вернуться" Margin="5" Click="btnBack_Click"/>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Page>
