--- a/Theater/PageAdmin/PageAddPerformance.xaml
+++ b/Theater/PageAdmin/PageAddPerformance.xaml
@@ -5,10 +5,27 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:theater.PageAdmin"
       mc:Ignorable="d" 
-      d:DesignHeight="350" d:DesignWidth="200"
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="PageAddPerformance">
 
     <Grid>
-        
+        <StackPanel x:Name="adminStackPanel" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBox x:Name="addPerformanceTitle"/>
+            <ComboBox x:Name="cbGenre" HorizontalAlignment="Stretch" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged">
+                <ComboBoxItem  IsHitTestVisible="False" Content="Выберите жанр:"/>
+                <ComboBoxItem Content="драма"/>
+            </ComboBox>
+            <TextBox x:Name="addPerformanceYearCreated"/>
+            <TextBox x:Name="addPerformanceAuthor"/>
+            <TextBox x:Name="addPerformanceDuration"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <TextBox x:Name="addPerformancePhoto"/>
+                <Button x:Name="btnAddPhoto" Content="..." Margin="5" Click="btnAddPhoto_Click"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button x:Name="btnAddPerformance"  Content="Добавить спектакль" Margin="5" Click="btnAddPerformance_Click"/>
+                <Button x:Name="btnBack" Content="Вернуться" Margin="5" Click="btnBack_Click"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Page>
