--- a/Theater/PageMain/PageActors.xaml
+++ b/Theater/PageMain/PageActors.xaml
@@ -62,6 +62,9 @@
         </ListView>
         <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center">
             <Button x:Name="btnBack" Content="Вернуться" Click="btnBack_Click"/>
+            <Button x:Name="btnAddActor" Content="Вернуться" Visibility="Collapsed"/>
+            <Button x:Name="btnDeleteActor" Content="Вернуться" Visibility="Collapsed"/>
+            <Button x:Name="btnEditActor" Content="Вернуться" Visibility="Collapsed"/>
         </StackPanel>
     </Grid>
 </Page>
