--- a/Theater/PageAdmin/PageAddShowtime.xaml
+++ b/Theater/PageAdmin/PageAddShowtime.xaml
@@ -11,9 +11,15 @@
     <Grid>
         <StackPanel x:Name="adminStackPanel" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBox x:Name="addPerformanceTitle"/>
-            <TextBox x:Name="addPerformancePhoto"/>
             <TextBox x:Name="addShowtimeDate"/>
             <TextBox x:Name="addShowtimePrice"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <TextBox x:Name="addPerformancePhoto"/>
+                <Button x:Name="btnAddPhoto" Content="..." Margin="5" Click="btnAddPhoto_Click"/>
+                <TextBox x:Name="addPerformanceDescription"/>
+                <TextBox x:Name="addPerformancePhoto1"/>
+                <Image x:Name="imgPhotoPreview" Width="200" Height="200"/>
+            </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button x:Name="btnAddPerformance"  Content="Добавить спектакль" Margin="5"/>
                 <Button x:Name="btnBack" Grid.Column="1" Content="Вернуться" Margin="5" Click="btnBack_Click"/>
