--- a/Theater/PageEdit/PageEditActor.xaml
+++ b/Theater/PageEdit/PageEditActor.xaml
@@ -1,25 +1,25 @@
-﻿<Page x:Class="theater.PageAdmin.PageAddActor"
+﻿<Page x:Class="theater.PageEdit.PageEditActor"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:theater.PageAdmin"
+      xmlns:local="clr-namespace:theater.PageEdit"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PageAddActor">
+      Title="PageEditActor">
 
     <Grid>
         <StackPanel x:Name="adminStackPanel" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBox x:Name="addActorFIO" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
-            <TextBox x:Name="addActorAge" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
-            <ComboBox x:Name="cbSex" HorizontalAlignment="Stretch" Margin="10" Loaded="ComboBox_Loaded" >
+            <TextBox x:Name="editActorFIO" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <TextBox x:Name="editActorAge" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <ComboBox x:Name="cbSex" HorizontalAlignment="Stretch" Margin="10" Loaded="ComboBox_Loaded">
                 <ComboBoxItem  IsHitTestVisible="False" Content="Выберите пол:"/>
                 <ComboBoxItem Content="м"/>
                 <ComboBoxItem Content="ж"/>
             </ComboBox>
-            <TextBox x:Name="addActorHeight" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
-            <TextBox x:Name="addActorWeight" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
-            <TextBox x:Name="addActorDetails" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <TextBox x:Name="editActorHeight" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <TextBox x:Name="editActorWeight" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
+            <TextBox x:Name="editActorDetails" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10" Background="White"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBox x:Name="addActorPhoto"/>
                 <Button x:Name="btnAddPhoto" Content="..." Margin="5" Click="btnAddPhoto_Click"/>
@@ -28,7 +28,7 @@
                 <Image x:Name="imgPhotoPreview" Width="200" Height="200"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Добавить актёра" Margin="5" Click="btnAddActor_Click"/>
+                <Button Content="Сохранить изменения" Margin="5" Click="btnSaveEditActor_Click"/>
                 <Button x:Name="btnBack" Grid.Column="1" Content="Вернуться" Margin="5" Click="btnBack_Click"/>
             </StackPanel>
         </StackPanel>
