--- a/Theater/PageMain/PageShowtimes.xaml
+++ b/Theater/PageMain/PageShowtimes.xaml
@@ -30,7 +30,7 @@
             <Button x:Name="btnGoToBasket" Click="btnGoToBasket_Click">Корзина</Button>
             <Button x:Name="btnAddShowtime" Visibility="Collapsed" Click="btnAddShowtime_Click">Добавить представление</Button>
             <Button x:Name="btnDeleteShowtime" Visibility="Collapsed" Click="btnDeleteShowtime_Click">Удалить представление</Button>
-            <Button x:Name="btnEditShowtime" Visibility="Collapsed" >Редактировать представление</Button>
+            <Button x:Name="btnEditShowtime" Visibility="Collapsed" Click="btnEditShowtime_Click">Редактировать представление</Button>
         </StackPanel>
         
         <ListView x:Name="listOfShowtimes" Grid.Row="1" ScrollViewer.CanContentScroll="False">
